--- a/index.html
+++ b/index.html
@@ -49,6 +49,27 @@
             right: 10px;
             cursor: pointer;
         }
+            
+        /* Add any specific styles for the Live Class button or container here if needed */
+        .live-class-button-container {
+            text-align: center;
+            margin-top: 30px;
+        }
+
+        .live-class-button {
+            display: inline-block;
+            padding: 15px 30px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+            background-color: #e67e22; /* A vibrant orange */
+            color: #fff;
+        }
+
+        .live-class-button:hover {
+            background-color: #d35400;
+        }
     </style>
 </head>
 <body>
@@ -118,6 +139,10 @@
                 </div>
             </div>
         </section>
+                <div class="live-class-button-container">
+            <a href="livee.html" class="live-class-button">Live Class</a>
+                </div>
+        
     </main>
 
     <footer>
