--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div id="resourcePopup" class="resource-popup">
             <h3>Quick Access Resources</h3>
             <p><a href="https://t.me/+-HD1bx41rgg2NjM1" target="_blank">Abhay batch</a></p>
-            <p><a href="https://t.me/+o4I3JtPCwaE0NDI1" target="_blank">Free books (More than 1700 files)</a></p>
+            <p><a href="https://t.me/+o4I3JtPCwaE0NDI1" target="_blank">Free books (class 10) </a></p>
             <p><a href="https://t.me/+rI6asay_qyE5YWQ1" target="_blank">Padhle 24 hours batch</a></p>
             <p><a href="https://t.me/+3fMAOyKoQMEwZGM1" target="_blank">Class 10th Topper Notes</a></p>
             <p><a href="https://t.me/+mAYie2wbWtBjYmY1" target="_blank">Board Booster[PW]</a></p>
@@ -100,6 +100,8 @@
             <p><a href="https://t.me/+lJBxy2EwgUMyNDBl" target="_blank">Class 11</a></p>
             <p><a href="https://t.me/+esYH5ap9a2ozYTg1" target="_blank">Aarambh 2026 (New)</a></p>
             <p><a href="https://t.me/+vgxhmay-tW0zM2Nl" target="_blank">Prarambh science</a></p>
+            <p><a href="https://t.me/+S5Hd7Ow8SP0zNDBl" target="_blank">Class 11 Book Bandhar</a></p>
+
             <button class="close-popup-button" onclick="hideResources()">&times;</button>
         </div>
 
