--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     <link rel="icon" href="study-icon.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <style>
+        /* Preloader Styles */
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(circle at center, #000000 0%, #0a0a0a 100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  transition: opacity 1s ease;
+}
+
+canvas {
+  background: transparent;
+}
         .resource-popup {
             display: none; /* Hidden by default */
             position: fixed;
@@ -75,6 +93,10 @@
     </style>
 </head>
 <body>
+    <!-- Preloader Spinner -->
+<div id="preloader">
+  <canvas id="canvas" width="600" height="600"></canvas>
+</div>
     <header>
         <div class="logo">
             <span class="logo-icon">💡</span>
@@ -162,6 +184,84 @@
         function hideResources() {
             document.getElementById('resourcePopup').style.display = 'none';
         }
+    </script>
+    <script>
+  const canvas = document.getElementById("canvas");
+  const ctx = canvas.getContext("2d");
+  const cx = canvas.width / 2;
+  const cy = canvas.height / 2;
+
+  const rings = [
+    { radius: 160, angle: 0, speed: 0.015, hueOffset: 0 },
+    { radius: 120, angle: 0, speed: -0.02, hueOffset: 120 },
+    { radius: 80, angle: 0, speed: 0.025, hueOffset: 240 }
+  ];
+
+  const trailLength = 1.6 * Math.PI;
+
+  function hslToColor(hue) {
+    return `hsl(${hue % 360}, 100%, 70%)`;
+  }
+
+  function drawRing(x, y, radius, angle, hue) {
+    const color = hslToColor(hue);
+    ctx.beginPath();
+    ctx.arc(x, y, radius, angle, angle + trailLength);
+    ctx.strokeStyle = color;
+    ctx.lineWidth = 12;
+    ctx.lineCap = "round";
+    ctx.shadowColor = color;
+    ctx.shadowBlur = 50;
+    ctx.stroke();
+  }
+
+  const stars = [];
+  for (let i = 0; i < 80; i++) {
+    stars.push({
+      x: Math.random() * canvas.width,
+      y: Math.random() * canvas.height,
+      radius: Math.random() * 1.5 + 0.5,
+      alpha: Math.random(),
+      delta: (Math.random() * 0.02) + 0.005
+    });
+  }
+
+  function drawStars() {
+    stars.forEach((star) => {
+      star.alpha += star.delta;
+      if (star.alpha <= 0 || star.alpha >= 1) star.delta = -star.delta;
+
+      ctx.beginPath();
+      ctx.arc(star.x, star.y, star.radius, 0, Math.PI * 2);
+      ctx.fillStyle = `rgba(255, 255, 255, ${star.alpha})`;
+      ctx.shadowColor = "white";
+      ctx.shadowBlur = 5;
+      ctx.fill();
+    });
+  }
+
+  function animate(time) {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    drawStars();
+    const globalHue = (time * 0.05) % 360;
+
+    rings.forEach((ring) => {
+      const hue = globalHue + ring.hueOffset;
+      drawRing(cx, cy, ring.radius, ring.angle, hue);
+      ring.angle += ring.speed;
+    });
+
+    requestAnimationFrame(animate);
+  }
+
+  requestAnimationFrame(animate);
+
+  // Hide preloader after 5 seconds
+  setTimeout(() => {
+    const preloader = document.getElementById("preloader");
+    preloader.style.opacity = 0;
+    setTimeout(() => preloader.remove(), 1000);
+  }, 5000);
     </script>
 </body>
 </html>
