--- a/Abhay batch.html
+++ b/Abhay batch.html
@@ -167,11 +167,11 @@
 
   <div class="main-box">
     <h2>Abhay Batch</h2>
-    <a href="#" class="btn">Hindi</a>
-    <a href="#" class="btn">English</a>
-    <a href="#" class="btn">SSC</a>
-    <a href="#" class="btn">Science</a>
-    <a href="#" class="btn">Math</a>
+    <a href="abhayhindi.html" class="btn">Hindi</a>
+    <a href="abhayeng.html" class="btn">English</a>
+    <a href="abhayssc.html" class="btn">SSC</a>
+    <a href="abhayscience.html" class="btn">Science</a>
+    <a href="abhaymaths.html" class="btn">Math</a>
   </div>
 
 </body>
