--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@ canvas {
             </div>
         </section>
 
+        <a href="abhay2025.html" class="button">Abhay Batch 2025</a>
+
         <div id="resourcePopup" class="resource-popup">
             <h3>Quick Access Resources</h3>
             <p><a href="https://t.me/+-HD1bx41rgg2NjM1" target="_blank">Abhay batch</a></p>
