--- a/Abhay2025.html
+++ b/Abhay2025.html
@@ -4,6 +4,55 @@
   <meta charset="UTF-8">
   <title>Study Smarter</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  
+<style>
+  #loading-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Ensure it's on top */
+  }
+
+  .container {
+    perspective: 1000px;
+  }
+
+  .cube {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    transform-style: preserve-3d;
+    animation: spin 4s linear infinite;
+  }
+
+  .face {
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    background: rgba(0, 255, 255, 0.2);
+    border: 2px solid #0ff;
+    box-shadow: 0 0 20px #0ff;
+  }
+
+  .front  { transform: translateZ(75px); }
+  .back   { transform: rotateY(180deg) translateZ(75px); }
+  .left   { transform: rotateY(-90deg) translateZ(75px); }
+  .right  { transform: rotateY(90deg) translateZ(75px); }
+  .top    { transform: rotateX(90deg) translateZ(75px); }
+  .bottom { transform: rotateX(-90deg) translateZ(75px); }
+
+  @keyframes spin {
+    0% { transform: rotateX(0deg) rotateY(0deg); }
+    100% { transform: rotateX(360deg) rotateY(360deg); }
+  }
+</style>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
@@ -156,6 +205,20 @@
   </style>
 </head>
 <body>
+  <div id="loading-container">
+  <div class="container">
+    <div class="cube">
+      <div class="face front"></div>
+      <div class="face back"></div>
+      <div class="face left"></div>
+      <div class="face right"></div>
+      <div class="face top"></div>
+      <div class="face bottom"></div>
+    </div>
+  </div>
+  </div>
+
+  <div id="website-content" style="display: none;">
 
   <div class="background-circles">
     <div class="circle"></div>
@@ -173,6 +236,19 @@
     <a href="abhayscience.html" class="btn">Science</a>
     <a href="abhaymaths.html" class="btn">Math</a>
   </div>
+  </div>
+  <script>
+  document.addEventListener('DOMContentLoaded', function() {
+    const loadingContainer = document.getElementById('loading-container');
+    const websiteContent = document.getElementById('website-content');
+
+    setTimeout(() => {
+      loadingContainer.style.display = 'none';
+      websiteContent.style.display = 'block';
+    }, 5000);
+  });
+  </script>
+  
 
 </body>
 </html>
