--- a/Abhay2025.html
+++ b/Abhay2025.html
@@ -61,7 +61,7 @@
     // Check if ad was watched and within 24 hours (86400000 ms = 24 hours)
     if (!adTime || now - adTime > 86400000) {
         alert("You need to generate a new access key.");
-        window.location.href = "YOUR_SHORTENER_URL";
+        window.location.href = "https://lksfy.com/rbKNnfm9";
     } else {
         // Allow access to content
         document.getElementById('content').style.display = "block";
