--- a/Key_successfullyy_generaated.html
+++ b/Key_successfullyy_generaated.html
@@ -2,27 +2,90 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Ad Confirmation</title>
+  <title>Verifying Access...</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
+      color: #fff;
+      text-align: center;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+      animation: fadeIn 2s ease forwards;
+    }
+
+    p {
+      font-size: 1.2rem;
+      margin-bottom: 30px;
+      animation: fadeIn 2.5s ease forwards;
+    }
+
+    .loader {
+      border: 8px solid #1e1e1e;
+      border-top: 8px solid #00e6e6;
+      border-radius: 50%;
+      width: 80px;
+      height: 80px;
+      animation: spin 1.5s linear infinite;
+      margin: 20px auto;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    @keyframes fadeIn {
+      0% { opacity: 0; transform: translateY(20px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+
+    .note {
+      margin-top: 40px;
+      font-size: 0.9rem;
+      color: #ccc;
+      animation: fadeIn 3s ease forwards;
+    }
+
+    .glow {
+      color: #00e6e6;
+      text-shadow: 0 0 5px #00e6e6, 0 0 10px #00e6e6, 0 0 20px #00e6e6;
+    }
+  </style>
+
   <script>
     let params = new URLSearchParams(window.location.search);
     if (!params.has('pass') || params.get('pass') !== 'ok') {
-        alert("Please go through the shortener link first!");
+        alert("Access denied! Please go through the shortener link first.");
         window.location.href = "https://lksfy.com/generate-key";
     } else {
-        // Check if already verified
         if (!localStorage.getItem('adVerified')) {
             localStorage.setItem('adVerified', 'true');
             localStorage.setItem('adWatchedTime', Date.now());
         }
-        // Redirect to main page
+        // Redirect after delay
         setTimeout(function() {
-            window.location.href = "studysmarterr.netlify.app";
-        }, 1500);
+            window.location.href = "/";
+        }, 3000);
     }
   </script>
 </head>
+
 <body>
-  <h2>Verifying your ad completion...</h2>
-  <p>Please wait a moment.</p>
+  <h1 class="glow">Verifying Your Access</h1>
+  <p>Hold tight, we're unlocking your content...</p>
+  <div class="loader"></div>
+  <div class="note">This process ensures safe access for all users and avoids copyright.</div>
 </body>
 </html>
