--- a/index.html
+++ b/index.html
@@ -227,6 +227,13 @@ canvas {
   <a href="abhay2025.html" class="batch-btn">Get it now</a>
         </div>
 
+        <div class="batch-card">
+            <h4>Study Friend</h4>
+            <p>This is ur ultimate study friend. Explore to know what it is...</p>
+            <a href="calculator.html" class="batch-btn">Meet him</a>
+            <p>Always with you, exclusively for you</p>
+        </div>
+
     
 
         <div id="resourcePopup" class="resource-popup">
