--- a/index.html
+++ b/index.html
@@ -135,8 +135,16 @@ canvas {
   text-shadow: 0 0 10px #ff00c8;
 }
 
+.batch-card h4 {
+  font-size: 1.4rem;
+  color: #f0f;
+  margin-bottom: 10px;
+  text-shadow: 0 0 7px #ff00c7;
+}
+        
+        
 .batch-card p {
-  color: #ddd;
+  color: #ddf;
   margin-bottom: 25px;
   font-size: 1.05rem;
 }
