--- a/index.html
+++ b/index.html
@@ -213,6 +213,9 @@ canvas {
 <div id="preloader">
   <canvas id="canvas" width="300" height="300"></canvas>
 </div>
+    
+  <div class="animated-background"></div>
+
     <header>
         <div class="logo">
             <span class="logo-icon">💡</span>
