--- a/index.html
+++ b/index.html
@@ -68,22 +68,26 @@ canvas {
   box-shadow: 0 0 30px #ff00c8, 0 0 60px #8e2de2;
 }
         .resource-popup {
-            display: none; /* Hidden by default */
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            z-index: 1000;
-            text-align: left;
+    display: none; /* Hidden by default */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #f9f9f9; /* Slightly off-white background */
+    padding: 30px; /* Increased padding */
+    border-radius: 12px; /* More rounded corners */
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); /* More prominent shadow */
+    z-index: 1000;
+    text-align: left;
+    width: 90%; /* Increased width - adjust as needed */
+    max-width: 600px; /* Maximum width to prevent it from being too wide on large screens */
+    border: 1px solid #ddd; /* Added a subtle border */
         }
+        
 
         .resource-popup h3 {
             margin-top: 0;
-            color: #3498db;
+            color: #E40078;
         }
 
         .resource-popup p {
@@ -91,7 +95,7 @@ canvas {
         }
 
         .resource-popup a {
-            color: #2980b9;
+            color: #FF007F;
             text-decoration: none;
         }
 
@@ -137,7 +141,7 @@ canvas {
 
 .batch-card h4 {
   font-size: 1.4rem;
-  color: #f0f;
+  color: #fff;
   margin-bottom: 10px;
   text-shadow: 0 0 7px #ff00c7;
 }
@@ -199,7 +203,7 @@ canvas {
             border-radius: 5px;
             font-weight: bold;
             transition: background-color 0.3s ease;
-            background-color: #e67e22; /* A vibrant orange */
+            background-color: #6A0DAD; /* A vibrant orange */
             color: #fff;
         }
 
@@ -239,7 +243,7 @@ canvas {
         </div>
 
         <div class="batch-card">
-            <h4>Study Friend</h4>
+            <h3>Study Friend</h3>
             <p>This is ur ultimate study friend. Explore to know what it is...</p>
             <a href="calculator.html" class="batch-btn">Meet him</a>
             <p>Always with you, exclusively for you</p>
@@ -259,6 +263,9 @@ canvas {
             <p><a href="https://t.me/+esYH5ap9a2ozYTg1" target="_blank">Aarambh 2026 (New)</a></p>
             <p><a href="https://t.me/+vgxhmay-tW0zM2Nl" target="_blank">Prarambh science</a></p>
             <p><a href="https://t.me/+S5Hd7Ow8SP0zNDBl" target="_blank">Class 11 Book Bandhar</a></p>
+            <p><a href="https://t.me/+u7FGxl_6lgU2ZWI1" target="_blank">Arjuna Jee 2026</a></p>
+            <p><a href="https://t.me/+pS4wOgOGzEkwM2U1" target="_blank">Aarambh 10th Lecture Group</a></p>
+            
 
             <button class="close-popup-button" onclick="hideResources()">&times;</button>
         </div>
@@ -267,7 +274,7 @@ canvas {
             <div class="resource-card guide-card">
                 <div class="card-header">
                     <div class="card-icon">📚</div>
-                    <h3>Study Guides</h3>
+                    <h3>Study Guides Class 11</h3>
                 </div>
                 <div class="card-body">
                     <p>Comprehensive guides covering various subjects and learning techniques.</p>
@@ -295,7 +302,7 @@ canvas {
                 <div class="card-body">
                     <p>Connect with fellow learners, share tips, and ask questions.</p>
                     <a href="https://t.me/networkofabhay" target="_blank" class="button secondary-button">Join Forum</a>
-                    <p class="link-description">Here is our main channel</p>
+                    <p class="link-description">Connect with us.</p>
                 </div>
             </div>
         </section>
