--- a/learning-techniques.html
+++ b/learning-techniques.html
@@ -46,6 +46,8 @@
     </style>
 </head>
 <body>
+
+    <div class="animated-background"></div>
     
   <!-- Your actual website content goes here -->
     <header>
