--- a/index.html
+++ b/index.html
@@ -224,29 +224,8 @@ canvas {
     </style>
 </head>
 <body>
-    <div id="loading-screen">
-    <div class="background-elements">
-        <div class="circle circle-1"></div>
-        <div class="circle circle-2"></div>
-        <div class="circle circle-3"></div>
-        <div class="circle circle-4"></div>
-        <div class="circle circle-5"></div>
-        <div class="circle circle-6"></div>
-        <div class="circle circle-7"></div>
-        <div class="circle circle-8"></div>
-        <div class="circle circle-9"></div>
-        <div class="circle circle-10"></div>
-        </div>
-
-    <div class="loader-content">
-        <div class="loader">
-            <div class="spinner"></div>
-            <div class="progress-text">Loading...</div>
-        </div>
-        <div class="progress-bar-container">
-            <div class="progress-bar"></div>
-        </div>
-    </div>
+<div id="preloader">
+  <canvas id="canvas" width="300" height="300"></canvas>
 </div>
 
 
