--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@ canvas {
   height: 100%;
   background: transparent; /* Initially transparent */
 }
-        
+        body.no-scroll {
+    overflow: hidden;
+}
+
         
 
 
