--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8816425286165857"
-     crossorigin="anonymous"></script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Study Smarter</title>
@@ -332,6 +331,7 @@ canvas {
         <p>&copy; 2025 Study Smarter. All Rights Reserved.</p>
         <p class="powered-by">Empowering Learners Worldwide</p>
     </footer>
+    <script>
     // --- JavaScript Code ---
 
 // Function to show the popup
@@ -365,6 +365,7 @@ function hideResources() {
 //     resourcePopup.style.display = 'none';
 //   }
 // };
+    </script>
     
 
 <script src="loading.js"></script>
