--- a/aarambh_ssc.html
+++ b/aarambh_ssc.html
@@ -130,7 +130,7 @@
     <div class="background-shapes"></div>
 
     <div class="container">
-        <h1>Maths</h1>
+        <h1>Ssc</h1>
 
         <div class="button-container">
             <a href="https://www.youtube.com/live/URGAO81IXXk?si=yYiapglBoIfa91Gq" class="math-button">Development 1</a>
