--- a/index.html
+++ b/index.html
@@ -252,6 +252,16 @@ canvas {
         </section>
 
         <div class="batch-card">
+            <h3>Aarambh Batch 2026</h3>
+            <p> For Class 10
+            •Best teachers
+            •Trending
+            •Notes and DPP(coming)
+            •And much more</p>
+            <a href="aarambh.html" class="batch-btn">Free Access</a>
+        </div>
+
+        <div class="batch-card">
   <h3>Abhay Batch 2025</h3>
   <p>Access this batch for free with us</p>
   <a href="abhay2025.html" class="batch-btn">Get it now</a>
