--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@ canvas {
             <span class="logo-icon">💡</span>
             Study Smarter
         </div>
-    </header>
+                             <a href=owner >Owner</a>
+    </header> 
 
     <main>
         <section class="hero">
