--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ canvas {
             <span class="logo-icon">💡</span>
             Study Smarter
         </div>
-                             <a href=owner >Owner</a>
+                             
     </header> 
 
     <main>
@@ -339,6 +339,7 @@ canvas {
     </main>
 
     <footer>
+        <p> Owner of this web:- <a href=owner >Info</a>
         <p>&copy; 2025 Study Smarter. All Rights Reserved.</p>
         <p class="powered-by">Empowering Learners Worldwide</p>
     </footer>
