--- a/index.html
+++ b/index.html
@@ -243,12 +243,7 @@ canvas {
                              
     </header> 
 
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Moved</title>
+    
     <style>
         bodyx {
             margin: 0;
@@ -309,7 +304,7 @@ canvas {
             border: 1px solid rgba(200, 200, 200, 0.5); /* Lighter border */
             box-shadow: 0 8px 12px rgba(0, 0, 0, 0.15); /* More prominent shadow */
             max-width: 90%; /* Limit width on smaller screens */
-            width: 400px; /* Fixed width for larger screens */
+            width: 200px; /* Fixed width for larger screens */
         }
 
         .message-boxx h1 {
@@ -421,7 +416,7 @@ canvas {
             •Trending
             •Notes and DPP(coming)
             •And much more</p>
-            <a href="aarambh.html" class="batch-btn">Free Access</a>
+            <a href="https://studysmarterx.netlify.app/aarambh" class="batch-btn">Free Access</a>
         </div>
 
         <div class="batch-card">
