--- a/index.html
+++ b/index.html
@@ -243,160 +243,11 @@ canvas {
                              
     </header> 
 
-    
-    <style>
-        bodyx {
-            margin: 0;
-            overflow: hidden;
-            background-color: #f0f0f0; /* Light background */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            position: relative;
-            font-family: 'Arial', sans-serif; /* More common font */
-            color: #333; /* Darker text for light background */
-        }
-
-        .backgroundx {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            z-index: 1;
-        }
-
-        .shapex {
-            position: absolute;
-            opacity: 0.3; /* More transparent */
-            animation: moveShape linear infinite;
-            will-change: transform; /* Optimize for animation */
-        }
-
-        .circlex {
-            border-radius: 50%;
-            background-color: rgba(255, 100, 150, 0.4); /* Softer pink */
-        }
-
-        .squarex {
-            background-color: rgba(100, 150, 255, 0.4); /* Softer blue */
-        }
-
-        @keyframes moveShapex {
-            0% {
-                transform: translate(0, 0);
-            }
-            100% {
-                transform: translate(var(--move-x), var(--move-y));
-            }
-        }
-
-        .message-boxx {
-            position: relative;
-            z-index: 2;
-            background-color: rgba(255, 255, 255, 0.7); /* More transparent white */
-            padding: 40px; /* Increased padding */
-            border-radius: 15px; /* More rounded corners */
-            text-align: center;
-            backdrop-filter: blur(15px); /* Increased blur */
-            border: 1px solid rgba(200, 200, 200, 0.5); /* Lighter border */
-            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.15); /* More prominent shadow */
-            max-width: 90%; /* Limit width on smaller screens */
-            width: 200px; /* Fixed width for larger screens */
-        }
-
-        .message-boxx h1 {
-            margin-top: 0;
-            color: #333;
-            margin-bottom: 20px; /* Added space below heading */
-        }
-
-        .message-boxx p {
-            margin-bottom: 15px; /* Space below paragraphs */
-            line-height: 1.6; /* Improve readability */
-        }
-
-        .message-boxx a {
-            color: #007bff; /* Standard link blue */
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s ease;
-        }
-
-        .message-boxx a:hover {
-            color: #0056b3; /* Darker blue on hover */
-            text-decoration: underline; /* Underline on hover */
-        }
-
-        .contact-buttonx {
-            display: inline-block;
-            margin-top: 25px; /* Space above the button */
-            padding: 8px 15px; /* Smaller padding */
-            background-color: #00ffff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 0.9em; /* Smaller font size */
-            transition: background-color 0.3s ease;
-            text-decoration: none; /* Remove underline from link */
-        }
-
-        .contact-buttonx:hover {
-            background-color: #0056b3;
-        }
-    </style>
-</head>
-<body>
-    <div class="backgroundx"></div>
-
-    <div class="message-boxx">
-        <h1>This website has been shifted</h1>
-        <p>Please visit our new online home for the latest information and updates. We look forward to seeing you there!</p>
-        <p><a href=https://studysmarterx.netlify.app>New website</a></p>
-
-        <a href="https://t.me/hokage_xMinato" class="contact-buttonx">Contact Us</a>
+    <div class="batch-card">
+  <h3>Website shifted</h3>
+  <p>we have moved our website</p>
+  <a href="https://studysmarterx.netlify.app" class="batch-btn">New website</a>
     </div>
-
-    <script>
-        const background = document.querySelector('.backgroundx');
-        const numberOfShapes = 70; // Increased number of shapes
-
-        function createShape() {
-            const shape = document.createElement('div');
-            shape.classList.add('shape');
-
-            const size = Math.random() * 40 + 20; // Size between 20 and 60
-            shape.style.width = `${size}px`;
-            shape.style.height = `${size}px`;
-
-            if (Math.random() > 0.5) {
-                shape.classList.add('circle');
-            } else {
-                shape.classList.add('square');
-            }
-
-            shape.style.top = `${Math.random() * 100}vh`;
-            shape.style.left = `${Math.random() * 100}vw`;
-
-            const moveX = (Math.random() - 0.5) * 300; // Increased movement range
-            const moveY = (Math.random() - 0.5) * 300;
-            shape.style.setProperty('--move-x', `${moveX}px`);
-            shape.style.setProperty('--move-y', `${moveY}px`);
-
-            const duration = Math.random() * 25 + 15; // Longer duration for smoother movement
-            shape.style.animationDuration = `${duration}s`;
-            shape.style.animationDelay = `${Math.random() * 5}s`; // Add random delay
-
-            background.appendChild(shape);
-        }
-
-        for (let i = 0; i < numberOfShapes; i++) {
-            createShape();
-        }
-    </script>
 
     <main>
         <section class="hero">
